--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -9,16 +9,17 @@
 /* #@define-color text  #e6e6e6; */
 /* #@define-color yellow #fed9a5; */
 
-@define-color bg     #1e1e2e;
+@define-color bg     #000000;
 @define-color blue   #89b4fa;
 @define-color text   #cdd6f4;
 @define-color red    #f38ba8;
 @define-color yellow #f9e2af;
+@define-color green  #91E788;
 
 * {
         font-family: JetBrainsMono Nerd Font;
-        font-size: 14px;
-        padding: 1 3px;
+        font-size: 12px;
+        padding: 0 0px;
         margin: -1px;
         opacity: 1;
 }
@@ -26,7 +27,7 @@
     window#waybar {
         background-color: @bg;
         color: @text;
-        border-radius: 8;
+        border-radius: 0;
         transition-duration: .5s;
     }
 
@@ -54,8 +55,8 @@
     #custom-time,
     #tray {
         background-color: @bg;
-        padding: 3 10px;
-        margin: 3 0px;
+        padding: 0 2px;
+        margin: 0 0px;
 
 }
     #workspaces {
@@ -76,17 +77,17 @@
     }
 
     #custom-net {
-        padding: 0 10px;
+        padding: 0 2px;
         color: @text;
     }
 
     #custom-separator {
-        padding: 0 0px;
+        padding: 0 5px;
         color: @blue;
     }
 
     #custom-packages {
-        padding: 0 10px;
+        padding: 0 2;
         color: @text;
     }
 
@@ -96,42 +97,42 @@
     }
 
     #cpu {
-        padding: 0 10px;
+        padding: 0 2px;
         color: @text;
     }
 
     #custom-temp {
-        padding: 0 10px;
+        padding: 0 5px;
         color: @text;
     }
 
     #window {
-        padding: 0 10px;
+        padding: 0 2px;
         color: @text;
     }
 
     #pulseaudio {
-        padding: 0 10px;
+        padding: 0 2;
         color: @text;
     }
 
     #custom-ip {
-        padding: 0 10px;
+        padding: 0 2;
         color: @text;
     }
 
     #custom-date {
-        padding: 0 10px;
-        color: @yellow;
+        padding: 0 2;
+        color: @text;
     }
 
     #custom-time {
-        padding: 0 10;
+        padding: 0 0;
         color: @text;
     }
 
     #clock {
-        padding: 0 10px;
+        padding: 0 0;
         color: @text;
     }
 
